--- a/files/src/gui/assets/css/page.css
+++ b/files/src/gui/assets/css/page.css
@@ -17,7 +17,7 @@
 .banner-image {
     width: 100%;
     height: auto;
-    min-height: 60px;
+    min-height: 100px;
     display: block;
     object-fit: cover;
     object-position: center;
